# smash

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.fujitsu  Makefile.intel  Makefile.mpiifort  Makefile.noMPI  Makefile.x86_64.noMPI  README  basis.F90  ccpvdz.F90  dft.F90  dftfunc.F90  ecp.F90  ecpder.F90  ecpfunc.F90  geom.F90  grad1.F90  grad2.F90  gradient.F90  gradrhf.F90  guess.F90  index.html  input.F90  int1.F90  int2.F90  int2a.F90  int2dddd.F90  int2dddp.F90  int2ddds.F90  int2ddpp.F90  int2ddps.F90  int2ddss.F90  int2dpdp.F90  int2dpds.F90  int2dppp.F90  int2dpps.F90  int2dpss.F90  int2dsds.F90  (+28 more)
doc/: Programmer_manual  User_manual
example/: .b3lyp-energy.out.swp  anthracene-check1.out  anthracene-check2.out  b3lyp-energy-npa.inp  b3lyp-energy-npa.out  b3lyp-energy.out  b3lyp-high-precision.inp  b3lyp-high-precision.out  b3lyp-opt.inp  b3lyp-opt.out  basis-gen.inp  basis-gen.out  check-generation.inp  check-generation.out  check-read.inp  check-read.out  ecp-gen.inp  ecp-gen.out  ecp-lanl2dz.inp  ecp-lanl2dz.out  ferrocene-ecp.inp  ferrocene-ecp.out  large-memory.inp  large-memory.out  medium-grad.out  medium.out  mp2-energy.inp  mp2-energy.out  mp2-opt.inp  mp2-opt.out  open.inp  open.out  point-charge.inp  point-charge.out  small-b3lyp.out  small-mp2.inp  small-mp2.out  small.inp  small.out  small.sh  (+3 more)
examples/: ecp-gen.inp  ecp-gen.out  ferrocene-ecp.inp  ferrocene-ecp.out  medium.inp  medium.out  open.inp  open.out  ufhopt.out  uhfopt.inp  uhfopt.out
src/: .basis.F90.swp  .parallel.F90.swp  basis.F90  dft.F90  dft.F90_160618  dft.F90_org  dftfunc.F90  dftpw91.F  ecp.F90  ecpder.F90  ecpfunc.F90  fileio.F90  geom.F90  grad1.F90  grad2.F90  gradient.F90  guess.F90  input.F90  int1.F90  int2.F90  int2elec.F90  int2rys.F90  int2sp.F90  int2spd1.F90  int2spd2.F90  int2spd3.F90  int2spd4.F90  lebedev.F90  machine.F90  main.F90  math.F90  memory.F90  module.F90  modulefmt.F90  modulerys.F90  mp2.F90  mp2grad.F90  parallel.F90  prop.F90  rysquad.F90  (+3 more)
stylesheets/: styles.css
tests/: large.inp  small.inp  tiny.inp
tests/.svn/: entries
tests/.svn/text-base/: large.out.svn-base  medium.inp.svn-base  medium.out.svn-base  small.out.svn-base
visual/: Makefile  cube-generator.F90  cube-generator_manual  vtk-generator.F90  vtk-generator_manual
vtk/: Makefile  README  cube-generator.F90  mo-view.pvsm  vtk-generator.F90  vtk-generator_manual
